# independent-skill-importer

./: .env.example  .gitignore  AUDIT_AND_NEXT_STEPS.md  README.md  pyproject.toml
.superpowers/sdd/: task-2-report.md
benchmarks/real_world/: BASELINE.md  README.md  cases.json  run.py
docs/: IMPORT_DECISION_ALGORITHM.md  INTERNAL_IMPLEMENTATION_REFERENCE.md  TECH_LEAD_IMPORTER_ALGORITHM.md
docs/superpowers/plans/: 2026-07-14-env-and-docs-redesign.md  2026-07-14-real-repository-path-analysis.md
docs/superpowers/specs/: 2026-07-14-env-and-docs-redesign-design.md  2026-07-14-real-repository-path-analysis-design.md
src/skill_importer/: __init__.py  boundaries.py  cli.py  discovery.py  errors.py  fm_review.py  importer.py  inventory.py  limits.py  models.py  pipeline.py  source.py  static_analysis.py
tests/: fixture_factory.py  test_acceptance_fixtures.py  test_boundaries_discovery.py  test_cli_e2e.py  test_fm_review.py  test_importer.py  test_models.py  test_pipeline.py  test_real_world_benchmark.py  test_remote_e2e.py  test_source_inventory.py  test_static_analysis.py
tests/fixtures/01_standalone/skill/: SKILL.md
tests/fixtures/03_skills_only_plugin/: README.md
tests/fixtures/03_skills_only_plugin/.claude-plugin/: marketplace.json  plugin.json
tests/fixtures/03_skills_only_plugin/docs/: usage.md
tests/fixtures/04_plugin_root_variable/: plugin.json
tests/fixtures/05_runtime_uses_skill/: plugin.json
tests/fixtures/06_mixed_unproven/: plugin.json
tests/fixtures/mixed_plugin/: README.md  plugin.json
tests/fixtures/skills_only_plugin/: README.md
(+44 files in other folders)
