[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "skill-importer"
version = "0.1.0"
description = "Safely discover and import standalone agent skills"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1,<9",
    "PyYAML>=6.0,<7",
]

[project.scripts]
skill-importer = "skill_importer.cli:cli"

[dependency-groups]
dev = [
    "mypy>=1.15,<2",
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_importer"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "RUF", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
